--- a/imgui.ini
+++ b/imgui.ini
@@ -14,16 +14,16 @@ Size=188,373
 Collapsed=0
 
 [Window][Main Viewport]
-Pos=0,70
-Size=854,650
+Pos=198,70
+Size=801,650
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=856,70
-Size=212,375
+Pos=0,70
+Size=196,650
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Gizmo]
 Pos=344,29
@@ -36,10 +36,10 @@ Size=121,104
 Collapsed=0
 
 [Window][Properties]
-Pos=856,447
-Size=212,273
+Pos=1001,487
+Size=279,233
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Ventana de ejemplo]
 Pos=1460,20
@@ -53,24 +53,37 @@ Size=314,202
 Collapsed=0
 
 [Window][Scene Nodes]
-Pos=1070,70
-Size=210,650
+Pos=1001,70
+Size=279,337
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
+
+[Window][Object Script Properties]
+Pos=347,225
+Size=238,383
+Collapsed=0
+
+[Window][Reload Assembly]
+Pos=1001,409
+Size=279,76
+Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0x6B582E0B,2]
-RefScale=15
+RefScale=16
 Column 0  Weight=1.0000
-Column 1  Width=65
+Column 1  Width=4
 
 [Docking][Data]
 DockSpace       ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1280,650 Split=X Selected=0xB90D41F9
-  DockNode      ID=0x00000007 Parent=0x9AC0FB4B SizeRef=1068,650 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=854,700 Split=X Selected=0xB90D41F9
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=818,700 CentralNode=1 Selected=0xB90D41F9
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=220,700 Selected=0xD1FBC3F2
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=212,700 Split=Y Selected=0xE7039252
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=230,547 Selected=0xE7039252
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=230,398 Selected=0x199AB496
-  DockNode      ID=0x00000008 Parent=0x9AC0FB4B SizeRef=210,650 Selected=0x2A411669
+  DockNode      ID=0x00000008 Parent=0x9AC0FB4B SizeRef=1639,947 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=196,947 Selected=0xE7039252
+    DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=1441,947 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=818,700 CentralNode=1 Selected=0xB90D41F9
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
+  DockNode      ID=0x00000003 Parent=0x9AC0FB4B SizeRef=279,947 Split=Y
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=277,605 Split=Y Selected=0x2A411669
+      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=255,528 Selected=0x2A411669
+      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=255,120 Selected=0xCC66F945
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=277,340 Selected=0x199AB496
 
