--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -28,10 +28,15 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC glfw3 Epsilon ${THIRDPARTY_DIR}/nethost.lib  OleAut32 ${CMAKE_DL_LIBS} ${Mono_LINK_LIBRARIES} ${Vulkan_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC glfw3 Epsilon ${CMAKE_DL_LIBS} ${Mono_LINK_LIBRARIES} ${Vulkan_LIBRARIES})
 
 if(WIN32)
-    target_link_libraries(${PROJECT_NAME} PRIVATE OpenAL32.dll)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenAL32.dll)
+    target_link_libraries(${PROJECT_NAME} PUBLIC shlwapi)
+    target_link_libraries(${PROJECT_NAME} PUBLIC comctl32)
+    target_link_libraries(${PROJECT_NAME} PUBLIC propsys)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${THIRDPARTY_DIR}/nethost.lib  OleAut32)
+    
 else()
     target_link_libraries(${PROJECT_NAME} PRIVATE openal)
 endif()
