added new widgets to editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Main Window]
 Pos=0,70
-Size=1280,650
+Size=1920,947
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,20 +10,20 @@ Collapsed=0
 
 [Window][Info]
 Pos=10,10
-Size=188,373
+Size=199,392
 Collapsed=0
 
 [Window][Main Viewport]
-Pos=198,70
-Size=801,650
+Pos=230,70
+Size=1089,947
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,0
 
 [Window][Inspector]
 Pos=0,70
-Size=196,650
+Size=228,436
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000B,0
 
 [Window][Gizmo]
 Pos=344,29
@@ -36,8 +36,8 @@ Size=121,104
 Collapsed=0
 
 [Window][Properties]
-Pos=1001,487
-Size=279,233
+Pos=1321,677
+Size=322,340
 Collapsed=0
 DockId=0x00000007,0
 
@@ -53,10 +53,10 @@ Size=314,202
 Collapsed=0
 
 [Window][Scene Nodes]
-Pos=1001,70
-Size=279,337
+Pos=1321,70
+Size=322,605
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000004,0
 
 [Window][Object Script Properties]
 Pos=347,225
@@ -64,26 +64,50 @@ Size=238,383
 Collapsed=0
 
 [Window][Reload Assembly]
-Pos=1001,409
-Size=279,76
+Pos=0,968
+Size=228,49
 Collapsed=0
 DockId=0x0000000A,0
+
+[Window][Material]
+Pos=0,508
+Size=228,458
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Assets]
+Pos=1645,70
+Size=275,947
+Collapsed=0
+DockId=0x00000003,0
 
 [Table][0x6B582E0B,2]
 RefScale=16
 Column 0  Weight=1.0000
 Column 1  Width=4
 
+[Table][0x0B9ACFB3,2]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=53
+
+[Table][0x73E67717,1]
+Column 0  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1280,650 Split=X Selected=0xB90D41F9
-  DockNode      ID=0x00000008 Parent=0x9AC0FB4B SizeRef=1639,947 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=196,947 Selected=0xE7039252
-    DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=1441,947 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=818,700 CentralNode=1 Selected=0xB90D41F9
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
-  DockNode      ID=0x00000003 Parent=0x9AC0FB4B SizeRef=279,947 Split=Y
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=277,605 Split=Y Selected=0x2A411669
-      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=255,528 Selected=0x2A411669
-      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=255,120 Selected=0xCC66F945
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=277,340 Selected=0x199AB496
+DockSpace           ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1920,947 Split=X Selected=0xB90D41F9
+  DockNode          ID=0x00000008 Parent=0x9AC0FB4B SizeRef=1643,947 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=228,947 Split=Y Selected=0xE7039252
+      DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=233,436 Selected=0xE7039252
+      DockNode      ID=0x0000000C Parent=0x00000001 SizeRef=233,509 Split=Y Selected=0x6AA6D9AC
+        DockNode    ID=0x00000009 Parent=0x0000000C SizeRef=233,458 Selected=0x6AA6D9AC
+        DockNode    ID=0x0000000A Parent=0x0000000C SizeRef=233,49 Selected=0xCC66F945
+    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=1413,947 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=818,700 Split=X Selected=0xB90D41F9
+        DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1089,947 CentralNode=1 Selected=0xB90D41F9
+        DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=322,947 Split=Y Selected=0x2A411669
+          DockNode  ID=0x00000004 Parent=0x0000000E SizeRef=307,605 Selected=0x2A411669
+          DockNode  ID=0x00000007 Parent=0x0000000E SizeRef=307,340 Selected=0x199AB496
+      DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
+  DockNode          ID=0x00000003 Parent=0x9AC0FB4B SizeRef=275,947 Selected=0x26CE0345
 
