--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ CMakeSettings.json
 assets/shaders/fragment.spv
 modules/dotnet/lib/EpsilonNET.csproj
 modules/dotnet/lib/Program.cs
+modules/dotnet/common/obj/x64/Debug/net8.0/common.sourcelink.json
+modules/dotnet/common/obj/x64/Debug/net8.0/common.AssemblyInfo.cs
+modules/dotnet/EpsilonSharp/obj/x64/Debug/net8.0/EpsilonSharp.sourcelink.json
