--- a/imgui.ini
+++ b/imgui.ini
@@ -9,19 +9,19 @@ Size=1057,629
 Collapsed=0
 
 [Window][Info]
-Pos=10,10
-Size=199,392
+Pos=10,30
+Size=207,392
 Collapsed=0
 
 [Window][Main Viewport]
-Pos=230,70
-Size=1089,947
+Pos=191,70
+Size=1252,947
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Inspector]
 Pos=0,70
-Size=228,436
+Size=189,564
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -36,8 +36,8 @@ Size=121,104
 Collapsed=0
 
 [Window][Properties]
-Pos=1321,677
-Size=322,340
+Pos=1445,635
+Size=238,382
 Collapsed=0
 DockId=0x00000007,0
 
@@ -53,10 +53,10 @@ Size=314,202
 Collapsed=0
 
 [Window][Scene Nodes]
-Pos=1321,70
-Size=322,605
+Pos=1445,70
+Size=238,357
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000F,0
 
 [Window][Object Script Properties]
 Pos=347,225
@@ -64,22 +64,43 @@ Size=238,383
 Collapsed=0
 
 [Window][Reload Assembly]
-Pos=0,968
-Size=228,49
+Pos=0,937
+Size=189,80
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Material]
-Pos=0,508
-Size=228,458
+Pos=0,636
+Size=189,299
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Assets]
-Pos=1645,70
-Size=275,947
+Pos=1685,70
+Size=235,947
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000008,0
+
+[Window][select_model_popup]
+Pos=60,60
+Size=125,164
+Collapsed=0
+
+[Window][Model Popup]
+Pos=403,229
+Size=460,203
+Collapsed=0
+
+[Window][New Node]
+Pos=160,90
+Size=960,540
+Collapsed=0
+
+[Window][Post-Process]
+Pos=1445,429
+Size=238,204
+Collapsed=0
+DockId=0x00000010,0
 
 [Table][0x6B582E0B,2]
 RefScale=16
@@ -95,19 +116,21 @@ Column 1  Width=53
 Column 0  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1920,947 Split=X Selected=0xB90D41F9
-  DockNode          ID=0x00000008 Parent=0x9AC0FB4B SizeRef=1643,947 Split=X
-    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=228,947 Split=Y Selected=0xE7039252
-      DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=233,436 Selected=0xE7039252
-      DockNode      ID=0x0000000C Parent=0x00000001 SizeRef=233,509 Split=Y Selected=0x6AA6D9AC
-        DockNode    ID=0x00000009 Parent=0x0000000C SizeRef=233,458 Selected=0x6AA6D9AC
-        DockNode    ID=0x0000000A Parent=0x0000000C SizeRef=233,49 Selected=0xCC66F945
-    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=1413,947 Split=X
-      DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=818,700 Split=X Selected=0xB90D41F9
-        DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1089,947 CentralNode=1 Selected=0xB90D41F9
-        DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=322,947 Split=Y Selected=0x2A411669
-          DockNode  ID=0x00000004 Parent=0x0000000E SizeRef=307,605 Selected=0x2A411669
-          DockNode  ID=0x00000007 Parent=0x0000000E SizeRef=307,340 Selected=0x199AB496
-      DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
-  DockNode          ID=0x00000003 Parent=0x9AC0FB4B SizeRef=275,947 Selected=0x26CE0345
+DockSpace             ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1920,947 Split=X Selected=0xB90D41F9
+  DockNode            ID=0x00000001 Parent=0x9AC0FB4B SizeRef=189,947 Split=Y Selected=0xE7039252
+    DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=233,387 Selected=0xE7039252
+    DockNode          ID=0x0000000C Parent=0x00000001 SizeRef=233,261 Split=Y Selected=0x6AA6D9AC
+      DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=233,204 Selected=0x6AA6D9AC
+      DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=233,55 Selected=0xCC66F945
+  DockNode            ID=0x00000002 Parent=0x9AC0FB4B SizeRef=1089,947 Split=X
+    DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=818,700 Split=X Selected=0xB90D41F9
+      DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=612,947 CentralNode=1 Selected=0xB90D41F9
+      DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=475,947 Split=X Selected=0x2A411669
+        DockNode      ID=0x00000003 Parent=0x0000000E SizeRef=238,650 Split=Y Selected=0x2A411669
+          DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=372,563 Split=Y Selected=0x2A411669
+            DockNode  ID=0x0000000F Parent=0x00000004 SizeRef=295,601 Selected=0x2A411669
+            DockNode  ID=0x00000010 Parent=0x00000004 SizeRef=295,344 Selected=0x4DFD600F
+          DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=372,382 Selected=0x199AB496
+        DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=235,650 Selected=0x26CE0345
+    DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
 
