Added new light type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 endif()
 
 option(BUILD_AS_LIBRARY "Build as a library" ON)
-option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" ON)
+option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" OFF)
 option(GFX_BACKEND_VULKAN "Use Vulkan as graphics backend" ON)
 option(GFX_BACKEND_WEBGPU "Use WebGPU as graphics backend" OFF)
 
@@ -541,8 +541,12 @@ if(!WIN32)
 endif()
 
 #target_link_libraries(${PROJECT_NAME} PUBLIC ktx)
-#target_link_libraries(${PROJECT_NAME} PUBLIC zlibstatic)
+if(WIN32)
+target_link_libraries(${PROJECT_NAME} PUBLIC zlibstatic)
+target_link_libraries(${PROJECT_NAME} PUBLIC zlib)
+else()
 target_link_libraries(${PROJECT_NAME} PUBLIC libz.so)
+endif()
 
 
 #add_dependencies(${PROJECT_NAME} LearningVulkan)
@@ -587,7 +591,7 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
 #add_subdirectory(examples/model)
 #if(!BUILD_AS_LIBRARY)
     add_subdirectory(editor)
-    add_subdirectory(examples/bsp)
+    #add_subdirectory(examples/bsp)
     add_subdirectory(projects/TowerDefense)
     #if(${Mono_FOUND})
     #add_subdirectory(examples/mono-managed)
