Fixed for Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.0.0)
-set(CMAKE_CXX_STANDARD 20)
+cmake_minimum_required(VERSION 3.6.0)
+set(CMAKE_CXX_STANDARD 23)
 
 set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 set(DBUILD_SHARED_LIBS ON CACHE BOOL "Build as a shared library")
@@ -42,9 +42,10 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 endif()
 
 option(BUILD_AS_LIBRARY "Build as a library" ON)
-option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" OFF)
+option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" ON)
 option(GFX_BACKEND_VULKAN "Use Vulkan as graphics backend" ON)
 option(GFX_BACKEND_WEBGPU "Use WebGPU as graphics backend" OFF)
+option(GFX_BACKEND_WEBGL "Use WebGL as graphics backend" OFF)
 
 if(BUILD_AS_LIBRARY EQUAL ON) 
     set(DBUILD_AS_LIBRARY 1)
@@ -593,6 +594,7 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
     add_subdirectory(editor)
     #add_subdirectory(examples/bsp)
     add_subdirectory(projects/TowerDefense)
+    add_subdirectory(projects/UI)
     #if(${Mono_FOUND})
     #add_subdirectory(examples/mono-managed)
     #endif()
