--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 endif()
 
 option(BUILD_AS_LIBRARY "Build as a library" ON)
-option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" ON)
+option(DOWNLOAD_LIBRARIES "Download thirdparty libraries" OFF)
 option(GFX_BACKEND_VULKAN "Use Vulkan as graphics backend" ON)
 option(GFX_BACKEND_WEBGPU "Use WebGPU as graphics backend" OFF)
 option(GFX_BACKEND_WEBGL "Use WebGL as graphics backend" OFF)
@@ -594,7 +594,8 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
     add_subdirectory(editor)
     #add_subdirectory(examples/bsp)
     add_subdirectory(projects/TowerDefense)
-    add_subdirectory(projects/UI)
+    add_subdirectory(projects/UIApp)
+    add_subdirectory(examples/chess)
     #if(${Mono_FOUND})
     #add_subdirectory(examples/mono-managed)
     #endif()
