--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -584,7 +584,7 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
 #add_subdirectory(examples/chess)
 #add_subdirectory(examples/model)
 #if(!BUILD_AS_LIBRARY)
-    add_subdirectory(editor)
+    #add_subdirectory(editor)
     add_subdirectory(examples/bsp)
     add_subdirectory(projects/TowerDefense)
     add_subdirectory(projects/UIApp)
