Added CI check in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -618,10 +618,12 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
 #add_subdirectory(examples/model)
 #if(!BUILD_AS_LIBRARY)
     #add_subdirectory(editor)
-    add_subdirectory(examples/bsp)
-    add_subdirectory(projects/TowerDefense)
-    add_subdirectory(projects/UIApp)
-    add_subdirectory(examples/chess)
+    if(!IS_CI_ENV)
+        add_subdirectory(examples/bsp)
+        add_subdirectory(projects/TowerDefense)
+        add_subdirectory(projects/UIApp)
+        add_subdirectory(examples/chess)
+    endif()
     #if(${Mono_FOUND})
     #add_subdirectory(examples/mono-managed)
     #endif()
