Fixed cmake configure command to take into account wether is in CI env or not

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 set(DBUILD_SHARED_LIBS ON CACHE BOOL "Build as a shared library")
 set(DGENERATE_RPM_PACKAGE OFF CACHE BOOL "Generate RPM deployment package")
 set(EPSILON_BUILD_LOCATION ${CMAKE_BINARY_DIR})
+set(IS_CI_ENV FALSE CACHE BOOL "It's in a CI environment")
 
 set(BUILD_ANDROID FALSE CACHE BOOL "Build for Android")
 
@@ -618,7 +619,8 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
 #add_subdirectory(examples/model)
 #if(!BUILD_AS_LIBRARY)
     #add_subdirectory(editor)
-    if(!IS_CI_ENV)
+    if(NOT ${IS_CI_ENV})
+        message("Adding sub projects")
         add_subdirectory(examples/bsp)
         add_subdirectory(projects/TowerDefense)
         add_subdirectory(projects/UIApp)
